[UPD] working on hashed passwords
