# index.js
@@ -1,4 +1,4 @@
-//@TS-Check
+
 require('dotenv').config();
 const express = require('express');
 const cors = require('cors');
@@ -35,36 +35,16 @@ app.get('/', (req, res) => {
   res.sendFile(path.join(__dirname, '/static/index.html'));
 });
 
-app.get('/*',requiresAuth(), (req, res) => {
-    res.send(req.oidc.isAuthenticated ? res.redirect("/app") : res.redirect("/"));
-  });
-app.get('/profile', requiresAuth(), (req,res)=>{
-  res.send(JSON.stringify(req.oidc.user))
+
+app.get('/login', (req, res) => {
+  //Authenticate server
 })
-  app.get('/auth', (req, res) => {
-    res.redirect(
-      `https://github.com/login/oauth/authorize?client_id=${process.env.GITHUB_CLIENT_ID}`,
-    );
-  });
-  app.get('/oauth-logged', ({ query: { code } }, res) => {
-    const body = {
-      client_id: process.env.GITHUB_CLIENT_ID,
-      client_secret: process.env.GITHUB_SECRET,
-      code,
-    };
-    const opts = { headers: { accept: 'application/json' } };
-    axios
-      .post('https://github.com/login/oauth/access_token', body, opts)
-      .then((_res) => _res.data.access_token)
-      .then((token) => {
-        // eslint-disable-next-line no-console
-        console.log('My token:', token);
-  
-        res.redirect(`/app`);
-      })
-      .catch((err) => res.status(500).json({ err: err.message }));
-  });
-  app.get('/app', requiresAuth(),(req, res) => {
+
+app.post('/users', (req, res) =>{
+
+})
+
+  app.get('/app', (req, res) => {
     res.sendFile(path.join(__dirname, '/static/links.html'));
   });
   app
@@ -73,7 +53,7 @@ app.get('/profile', requiresAuth(), (req,res)=>{
     res.setHeader("Access-Control-Allow-Origin", "*");
     next();
   })
-  .use("/app", requiresAuth() , require("./routes"))
+  .use("/app", require("./routes"))
  
 // middleware
 app.use(errorLogger)
